--- a/marching_contact.html
+++ b/marching_contact.html
@@ -59,6 +59,10 @@
 						<input type="text" id="fname" name="fname" placeholder="Enter your first name"><br>
 					<label for="lname">Last Name</label><br>
 						<input type="text" id="lname" name="lname" placeholder="Enter your last name"><br>
+					<label for="email address">Email Address:</label><br>
+						<input type="text" id="email" name="email" placeholder="Enter your email address"><br>
+					<label for="mobile number">Mobile Number:</label><br>
+						<input type="text" id="mobile" name="mobile" placeholder="Enter your contact number"><br>
 					<label for="message">Attn:</label><br>
 						<input type="text" id="Attn:" name="Attn:" placeholder="Enter Association Members Name (Members names listed below this form)"><br>
 					<label for="message">Message</label><br>
