--- a/marching_contact.html
+++ b/marching_contact.html
@@ -68,7 +68,7 @@
 					<label for="message">Message</label><br>
 						<textarea placeholder="Enter your enquiry"></textarea><br>
 					<input type="checkbox" id="mlist" name="mlist">
-					<label for="mlist">Sign me up for updates</label><br>
+					<label for="mlist">I confirm approval for my information to be forwarded on to correct coach/team</label><br>
 						<input type="Reset" value="Clear" align="right">
 						<input type="submit" value="Submit" align="right">
 				</form>
