--- a/marching_contact.html
+++ b/marching_contact.html
@@ -65,6 +65,8 @@
 						<input type="text" id="mobile" name="mobile" placeholder="Enter your contact number"><br>
 					<label for="message">Attn:</label><br>
 						<input type="text" id="Attn:" name="Attn:" placeholder="Enter Association Members Name (Members names listed below this form)"><br>
+					<label for="message">Canterbury Location:</label><br>
+						<input type="text" id="Location:" name="Location:" placeholder="Enter you location (This is so we can put you in touch with a team in your area)"><br>
 					<label for="message">Message</label><br>
 						<textarea placeholder="Enter your enquiry"></textarea><br>
 					<input type="checkbox" id="mlist" name="mlist">
