--- a/marching_contact.html
+++ b/marching_contact.html
@@ -67,10 +67,13 @@
 						<input type="text" id="Location:" name="Location:" placeholder="Enter you location (This is so we can put you in touch with a team in your area)"><br>
 					<label for="message">Message</label><br>
 						<textarea placeholder="Enter your enquiry"></textarea><br>
+					
 					<input type="checkbox" id="mlist" name="mlist">
-					<label for="mlist">I APPROVE FOR MY INFORMATION TO BE PASSED ON</label><br>
-						<input type="Reset" value="Clear" align="right">
-						<input type="submit" value="Submit" align="right">
+						<label for="mlist">I approve for Marching Canterbury to forward my information to a local coach/team</label><br>
+					<input type="checkbox" id="mlist" name="mlist">
+						<label for="mlist">I approve to Marching Canterbury that my personal information is accurate, up to date, complete, relevant and not misleading.</label><br>
+					<input type="Reset" value="Clear" align="right">
+					<input type="submit" value="Submit" align="right">
 				</form>
 		
 				<div class="section2">
