--- a/marching_contact_coachingcoordinator.html
+++ b/marching_contact_coachingcoordinator.html
@@ -28,6 +28,7 @@
 					<li><a href="marching_join.html" class="navtext">join</a></li>
 					<li><a href="marching_about.html" class="navtext">about</a></li>
 					<li><a href="marching_contact.html" class="navtext">contact</a></li>
+					<li><a href="privacyPolicy.html" class="navtext">privacy</a></li>
 				</ul>
 			</nav>
 			
