--- a/marching_contact.html
+++ b/marching_contact.html
@@ -73,6 +73,8 @@
 						<label for="mlist">I approve for Marching Canterbury to forward my information to a local coach/team</label><br>
 					<input type="checkbox" id="mlist" name="mlist">
 						<label for="mlist">I approve that my personal information is accurate, up to date, complete, relevant and not misleading.</label><br>
+					<input type="checkbox" id="mlist" name="mlist">
+						<label for="mlist">I understand that by submitting this form only the website administrator, myself and the coach or manager of 1 team will have my details.</label><br>
 					<input type="Reset" value="Clear" align="right">
 					<input type="submit" value="Submit" align="right">
 				</form>
