--- a/marching_contact.html
+++ b/marching_contact.html
@@ -74,9 +74,9 @@
 					<input type="checkbox" id="mlist" name="mlist">
 						<label for="mlist">I approve that my personal information is accurate, up to date, complete, relevant and not misleading.</label><br>
 					<input type="checkbox" id="mlist" name="mlist">
-						<label for="mlist">I understand that by submitting this form only the website administrator, myself and the coach or manager of 1 team will have my details.</label><br>
+						<label for="mlist">I understand that for my enquiry to be responded too, my information will be forwarded from website admin to a registered coach or manager.</label><br>
 					<input type="Reset" value="Clear" align="right">
-					<input type="submit" value="Submit" align="right">
+					<input type="submit" value="Submit" align="right"> 
 				</form>
 		
 				<div class="section2">
