--- a/marching_contact.html
+++ b/marching_contact.html
@@ -70,11 +70,11 @@
 						<textarea placeholder="Enter your enquiry"></textarea><br>
 					
 					<input type="checkbox" id="mlist" name="mlist">
-						<label for="mlist">I approve for Marching Canterbury to forward my information to a local coach/team</label><br>
+						<label for="mlist">I approve for Marching Canterbury to forward my information onto a local coach/team</label><br>
 					<input type="checkbox" id="mlist" name="mlist">
 						<label for="mlist">I approve that my personal information is accurate, up to date, complete, relevant and not misleading.</label><br>
 					<input type="checkbox" id="mlist" name="mlist">
-						<label for="mlist">I understand that for my enquiry to be responded too, my information will be forwarded from website admin to a registered coach or manager.</label><br>
+						<label for="mlist">I understand my information stays between myself, the Marching Canterbury Administrator and a registered Coach or Manager .</label><br>
 					<input type="Reset" value="Clear" align="right">
 					<input type="submit" value="Submit" align="right"> 
 				</form>
