--- a/marching_contact.html
+++ b/marching_contact.html
@@ -74,7 +74,7 @@
 					<input type="checkbox" id="mlist" name="mlist">
 						<label for="mlist">I approve that my personal information is accurate, up to date, complete, relevant and not misleading.</label><br>
 					<input type="checkbox" id="mlist" name="mlist">
-						<label for="mlist">I understand my information stays between myself, the Marching Canterbury Administrator and a registered Coach <br>or Manager.</label><br>
+						<label for="mlist">I understand my information stays between myself, the Marching Canterbury Administrator and a registered Coach or Manager.</label><br>
 					<input type="Reset" value="Clear" align="right">
 					<input type="submit" value="Submit" align="right"> 
 				</form>
