--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -24,7 +24,7 @@
 					<li><br></li>
 					<li><br></li>
 					<li><br></li>
-					<li><a href="marching_homepage.html" class="navtext">home</a></li>
+					<li><a href="index.html" class="navtext">home</a></li>
 					<li><a href="marching_join.html" class="navtext">join</a></li>
 					<li><a href="marching_about.html" class="navtext">about</a></li>
 					<li><a href="marching_contact.html" class="navtext">contact</a></li>
