--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -34,7 +34,7 @@
 			
 <!--MARCHING LOGO-------------------------------------------------------------->
 			<div class="logo">
-				<a href="marching_homepage.html"><img src="images/logo.png" alt="Marching Logo"></a>
+				<a href="index.html"><img src="images/logo.png" alt="Marching Logo"></a>
 			</div>
 		</header>
 		
