--- a/marching_contact.html
+++ b/marching_contact.html
@@ -70,7 +70,7 @@
 						<textarea placeholder="Enter your enquiry"></textarea><br>
 					
 					<input type="checkbox" id="mlist" name="mlist">
-						<label for="mlist">I approve for Marching Canterbury to forward my information onto a local coach/team</label><br>
+						<label for="mlist">I approve for Marching Canterbury to forward my information onto a local coach/manager</label><br>
 					<input type="checkbox" id="mlist" name="mlist">
 						<label for="mlist">I approve that my personal information is accurate, up to date, complete, relevant and not misleading.</label><br>
 					<input type="checkbox" id="mlist" name="mlist">
