--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -55,22 +55,37 @@
 		<section>
 			<div class="aboutcard">
 				<p align="center">We collect personal information from you, including information about your:
-				<br>•	Name
-				<br>•	Contact Information
-				<br>•	Location
-				<br>•	Enquiries
-				<br>
-				<br>We collect your personal information in order to:
-				<br>•	Forward your enquiry through to a registered Marching Canterbury Coach or Manager.
-				<br>
-				<br>Providing some information is optional. If you choose not to enter a contact number <br>or email address, we'll be unable to forward your enquiry onto the appropriate registered Marching Canterbury Coach or Manager.
-				<br>
-				<br>You have the right to ask for a copy of any personal information we hold about you, and to ask <br>for it to be corrected if you think it is wrong. 
-				<br>
-				<br>If you’d like to ask for a copy of your information, or <br>to have it corrected, please contact us at 
-				<br>
-				<br>marching@canterbury.co.nz<br>021 207 5835<br>212a Grahams Road<br>Burnside<br>Christchurch 8053
-</p>
+						<br>•	First and Last Name
+						<br>•	Contact Email
+						<br>•	Phone Number
+						<br>•	Location
+						<br>•	Enquiry Message
+						<br>
+					<br>We collect your personal information in order to:
+						<br>•	Forward your enquiry through to the appropriate registered Marching Canterbury Coach or Manager for .
+					<br>
+					<br>We confirm that the personal information you have provided is:
+					<br>•	Received by the website administrator and forwarded onto a 3rd party i.e. Registered Coach or Manager only.
+					<br>•	Private and Confidential between the user, the website administrator and the 3rd party contact (Coach or Manager).
+					<br>•	Only used for what it was intended for; that being enquiring about a local registered Marching Canterbury team in your area.
+					<br>
+					<br>We confirm the following processes will be followed:
+					<br>•	Any form submissions where 1 or more of the 3 authoritative tick boxes are not ticked by the user on submittal, will not give the website administrator authorisation to share your information to a 3rd party, therefore your request cannot be processed. 
+					<br>•	A return email will be sent from the website administrator to the users supplied email informing them they will need to resubmit a new enquiry with all authoritative boxes ticked.
+					<br>•	Should all 3 authoritative boxes be ticked, the user has agreed and understood their information will be read and processed by the Marching Canterbury administrator before forwarded through to the approved Marching Canterbury registered Coach or Manager. 
+					<br>•	Only with written consent via email from the User to the Manager, Coach or Website Administrator will be accepted as verification authorisation has been given to pass those details on to a 4th party. The email of consent needs to be addressed from the email address that put through the original request.
+					<br>
+					<br>We confirm 1 or more of the following authorisations not be approved by the user on submission, the enquiry cannot 
+					<br>be processed:
+					<br>•	I approve for Marching Canterbury to forward my information onto a local coach/manager
+					<br>•	I approve that my personal information is accurate, up to date, complete, relevant and not misleading
+					<br>•	I understand my information stays between myself, the Marching Canterbury Administrator and a registered Coach or Manager
+					<br>
+					<br>Authorisation of all 3 tick boxes are needed in order to forward your enquiry on.
+					<br>Providing some information is optional and the open text boxes allow you to write in your words the information you wish to provide.  If you choose not to enter a contact number or email address, we'll be unable to forward your enquiry onto the appropriate registered Marching Canterbury Coach or Manager.
+					<br>You have the right to ask for a copy of any personal information we hold about you, and to ask for it to be corrected if you think it is wrong. If you’d like to ask for a copy of your information, or to have it corrected, please contact us at marching@canterbury.co.nz, or 021 207 5835, or 212a Grahams Road, Burnside, Christchurch 8053.
+
+				</p>
 			</div>
 		</section>
 
